# vision-embeddings

./: .gitignore  README.md  benchmark_all_encoders.ipynb  pyproject.toml  test_clip.py  test_local.py  test_real.py
vision_embeddings/: __init__.py  __main__.py  auto_batch.py  batch_upload.py  config.py  dali_preprocessor.py  pipeline.py
vision_embeddings/datasets/: __init__.py  defaults.py
vision_embeddings/encoders/: __init__.py  base.py  defaults.py  hf_video.py  hf_vision.py  torch_hub.py
